[package]

name = "consul"
version = "0.4.2"
edition = "2018"
authors = ["Andrew Useckas <andrew.useckas@threat-x.com>", "Stu Small <stuart.small@threat-x.com>", "YoungKing <yanckin@gmail.com>", "Pierre Souchay <https://github.com/pierresouchay>", "Tomer Shalev <https://github.com/tomers>"]
description = "Rust client libray for Consul HTTP API"
documentation = "https://docs.rs/consul/"
repository = "https://github.com/pierresouchay/consul-rust"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

[dependencies]
async-trait = "0.1.59"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.1"

[dev-dependencies]
base64 = "0.21.0"
hostname = "0.3"
rand = "0.8.3"
tokio = { version = "1.22.0", features = ["macros"] }
